Bug 1991290 - Apply overflow-clip-box to input's scroll containers explicitly. r=tnikkel,layout-reviewers
As per other discussions we don't really want to expose this property to
authors, so there's no benefit in letting them override it.

This property's content-box value doesn't play nice with border-radius
(well, it does deal with it correctly, but it doesn't do what we want it
to do).

Differential Revision: https://phabricator.services.mozilla.com/D266605

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -13,7 +13,6 @@
   unicode-bidi: inherit;
   text-overflow: inherit;
   overflow: inherit;
-  overflow-clip-box: inherit;
   resize: inherit;
   /* Need to inherit border-radius too, so when the fieldset has rounded
      borders we don't leak out the corners for hit-testing purposes. */
@@ -95,7 +94,6 @@ input {
   font: -moz-field;
   text-rendering: optimizeLegibility;
   cursor: text;
-  overflow-clip-box: padding-box content-box;
 }
 
 textarea {
@@ -145,7 +143,6 @@ button,
   resize: inherit;
   scrollbar-width: inherit;
   -moz-control-character-visibility: visible;
-  overflow-clip-box: inherit;
   visibility: hidden;
 }
 
@@ -184,6 +181,7 @@ button,
 input::placeholder,
 input::-moz-text-control-editing-root,
 input::-moz-text-control-preview {
+  overflow-clip-box: padding-box content-box;
   scrollbar-width: none;
   resize: none;
   word-wrap: normal;
@@ -229,7 +227,6 @@ select {
   /* No text-decoration reaching inside, by default */
   display: inline-block;
   break-inside: avoid;
-  overflow-clip-box: padding-box !important; /* bug 992447 */
   padding-block: 1px;
 
   /* Set some styles for drop down selects. These are overridden below for
@@ -501,7 +498,6 @@ input:is([type="color"], [type="reset"], [type="button"], [type="submit"]) {
   cursor: default;
   box-sizing: border-box;
   user-select: none;
-  overflow-clip-box: padding-box;
   break-inside: avoid;
 }
 
@@ -573,7 +569,6 @@ select:is(:disabled, :disabled:active) > button {
 /* file selector */
 input[type="file"] {
   white-space: nowrap !important;
-  overflow-clip-box: padding-box;
   color: unset;
 
   /* Revert rules which apply on all inputs. */
